--- a/.devcontainer/docker/Dockerfile
+++ b/.devcontainer/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/devcontainers/python:1-3.12-bullseye
 
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends ca-certificates fonts-firacode sshpass && \
+    apt-get install -y --no-install-recommends ca-certificates fonts-firacode sshpass inetutils-ping && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
     update-ca-certificates && \
