--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 inventory = ./hosts.yml
 
-collections_paths = .ansible/collections
+collections_path = .ansible/collections
 playbook_dir = ./playbooks
 roles_path = .ansible/roles:./roles
 
