feat: add ansible-playground-docker

--- a/.config/hosts.playground.yml
+++ b/.config/hosts.playground.yml
@@ -5,6 +5,7 @@
 nodes:
   vars:
     ansible_connection: ssh
+    ansible_ssh_common_args: "-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
     ansible_host: localhost
     ansible_user: ubuntu
     ansible_ssh_pass: ubuntu
