--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,5 +43,6 @@
 
   "prettier.requireConfig": false,
   "ansible.python.interpreterPath": "/usr/local/bin/python3",
-  "ansible.validation.lint.path": "/usr/local/py-utils/bin/ansible-lint"
+  "ansible.validation.lint.path": "/usr/local/py-utils/bin/ansible-lint",
+  "markdown.extension.toc.levels": "2..6"
 }
