chore: turn off wordwrap for markdown

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,9 @@
     "editor.tabSize": 2,
     "editor.insertSpaces": true
   },
+  "[markdown]": {
+    "editor.wordWrap": "off"
+  },
 
   "prettier.requireConfig": false,
   "ansible.python.interpreterPath": "/usr/local/bin/python3",
