--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -45,7 +45,8 @@
         "mrkaran.nomfmt",
         "esbenp.prettier-vscode",
         "jlcs-es.x509-parser",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
+        "aaron-bond.better-comments"
       ]
     }
   },
