--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,11 +31,11 @@
   "workspaceMount": "source=${localWorkspaceFolder},target=/work,type=bind",
   "workspaceFolder": "/work",
   "mounts": [
-    "source=${localEnv:HOME}/.ansible_vault_pass,target=/home/vscode/.ansible_vault_pass,type=bind",
-    "source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,ro",
-    "source=${localEnv:HOME}/.ssh/config,target=/home/vscode/.ssh/config,type=bind",
-    "source=${localEnv:HOME}/.ssh/known_hosts,target=/home/vscode/.ssh/known_hosts,type=bind",
-    "source=${localEnv:HOME}/.ssh/ansible/,target=/home/vscode/.ssh/ansible/,type=bind"
+    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.ansible_vault_pass,target=/home/vscode/.ansible_vault_pass,type=bind",
+    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh,target=/home/vscode/.ssh,type=bind,ro",
+    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh/config,target=/home/vscode/.ssh/config,type=bind",
+    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh/known_hosts,target=/home/vscode/.ssh/known_hosts,type=bind",
+    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh/ansible/,target=/home/vscode/.ssh/ansible/,type=bind"
   ],
   "customizations": {
     "vscode": {
